# SwipesBurnout_MatchSemantico

./: .env.example  .gitignore  BRIEFING.md  README.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-fundacao/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-04-PLAN.md  01-04-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-seed-data-sintetico/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-agentes-e-grafo-langgraph/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-pipeline-de-ingestao/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-pipeline-de-consumo-e-scoring/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  (+1 more)
app/: streamlit_app.py
connect_ai/: agentes.py  config.py  grafo.py  ingestao.py  repositorio.py  schema.py  scoring.py  seed_data.py
notebook/: demo_cp5.ipynb
relatorio/: CONTEUDO.md  ETICA.md  RELATORIO.md  grafo_pipeline.mmd  pipeline_consumo.mmd  pipeline_ingestao.mmd
swipes_burnout/: __init__.py  agentes.py  config.py  grafo.py  ingestao.py  repositorio.py  scoring_utils.py  seed_data.py
tests/: conftest.py  test_agentes.py  test_config.py  test_consumo.py  test_grafo.py  test_ingestao.py  test_repositorio.py  test_schema.py  test_scoring.py  test_scoring_utils.py  test_seed_data.py
(+9 files in other folders)
